--- a/assets/solarized.css
+++ b/assets/solarized.css
@@ -5,9 +5,6 @@ html {
 body, main {
 	background-color: #073642;
 }
-code {
-	background-color: #073642;
-}
 a {
 	color: #b58900;
 }
@@ -27,10 +24,7 @@ h5,
 h6 {
 	color: #859900;
 }
-pre {
+pre,code {
 	background-color: #002b36;
 	color: #839496;
-}
-pre, code {
-	background-color: #002b36;
 }
